force-app/main/default/objects/bpats__Employment_History__c/bpats__Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>