force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Contact__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <type>Lookup</type>
</CustomField>