force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>