force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Employer_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Employer_Org_Type__c</fullName>
    <label>Employer Org Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>