force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Employment_History__c.field-meta.xml
<CustomField>
    <fullName>bpats__Employment_History__c</fullName>
    <label>Employment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>