force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Job_Grade__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Grade__c</fullName>
    <label>Job Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>