force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Months_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>bpats__Months_Of_Work__c</fullName>
    <label>Months Of Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>