force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Org_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Org_Name__c</fullName>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>