force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Position_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Position_Type__c</fullName>
    <label>Position Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>