force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Start_Date__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>