force-app/main/default/objects/bpats__Employment_History__c/fields/bpats__Title__c.field-meta.xml
<CustomField>
    <fullName>bpats__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>